Fixed carousel button functions on home page and changed wrapping anchor tag to div with onClick attribute.

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -60,6 +60,10 @@
   height: 24px;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .map-placeholder {
   min-height: 600px;
   border: 1px solid black;
